--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,4 @@ services:
     marseysearch:
         ports:
             - '1234:1234'
-        image: 'marseysearch:latest'
+        image: 'marseythecat/marseysearch:latest'
